# hdx-python-scraper

./: .travis.yml  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.config/: pre-commit-config.yaml
.github/workflows/: run-python-tests.yaml  run-python-tests.yml
doc/: main.md
docs/: main.md
documentation/: conf.py  index.rst  main.md  pydoc-markdown.yaml
src/hdx/scraper/: __init__.py  base_scraper.py  exceloutput.py  fallbacks.py  googlesheets.py  input.py  jsonoutput.py  nooutput.py  readers.py  rowparser.py  runner.py  scraper.py  scrapers.py  tabularparser.py  utils.py
src/hdx/scraper/configurable/: aggregator.py  filecopier.py  resource_downloader.py  rowparser.py  scraper.py  timeseries.py
src/hdx/scraper/framework/: base_scraper.py  runner.py
tests/config/: project_configuration.yaml  project_configuration.yml
tests/fixtures/: COVID-19 Vaccine Doses in HRP Countries - Data HXL.csv  access_2pacx-1vrszjzuyvt9i-mkrq2hbxrul2lx2vihkthqm-lae8nyhqty70zqtcufs3pxbhzgat1l2bkoa4-daoap-pub-gid-574237756-single-true-output-csv.csv  additional_json.json  affected_targeted_reached_affected_targeted_reached_eth_ethiopia_drought_affected_targeted_reached_by_cluster.csv  affected_targeted_reached_affected_targeted_reached_ken_kenya_drought_affected_targeted_reached_by_cluster.csv  affected_targeted_reached_affected_targeted_reached_som_somalia_drought_affected_targeted_reached_by_cluster.csv  cerf-covid-19-allocations.json  covax_2pacx-1vtvzu79pptfaa2syevoqfyrrjy63djwitqu0ffbxiqczoun9k9timwmrvfgg1rbsnlmgyugzseiaye2-pub-gid-992438980-single-true-output-csv.csv  covid_impact_education.csv  covidtests_data-owid-covid-data.xlsx  default_fixtures-ukraine-key-figures.csv  download-hno-2017-sahel-nutrition.csv  ethiopia-drought-related-key-figures.json  ethiopia-pin-targeted-reached-by-location-and-cluster.json  fallbacks.json  global-school-closures-covid19.json  idmc-internally-displaced-persons-idps.json  idps_download-displacement-data.csv  idps_override_population.json  idps_somalia_som_unhcr_prmn_displacement_dataset.xlsx  ipc_somalia_download-som-food-insecurity-oct-dec2022-projection.csv  kenya-drought-related-key-figures.json  kenya-pin-targeted-reached-by-location-and-cluster.json  key_figures_2pacx-1vrppqx8jtkkkrckmzfncmmtfecvcpkbp9pdhs1sqtuyacmbsx8tlaxpgblfce-lcehukregguxja-4s-pub-gid-0-single-true-output-csv.csv  key_figures_2pacx-1vrppqx8jtkkkrckmzfncmmtfecvcpkbp9pdhs1sqtuyacmbsx8tlaxpgblfce-lcehukregguxja-4s-pub-gid-1275038715-single-true-output-csv.csv  key_figures_2pacx-1vrppqx8jtkkkrckmzfncmmtfecvcpkbp9pdhs1sqtuyacmbsx8tlaxpgblfce-lcehukregguxja-4s-pub-gid-2015311116-single-true-output-csv.csv  ourworldindata_other_data.csv  ourworldindata_vaccinedoses.csv  sadd-countries-to-include.csv  sahel-humanitarian-needs-overview.json  somalia-acute-food-insecurity-country-data.json  somalia-internally-displaced-persons-idps.json  somalia-pin-targeted-reached-by-location-and-cluster.json  test_output.xlsx  test_scraper_all.json  test_tabular_all.json  test_tabular_population.json  test_tabular_population_2.json  total-covid-19-tests-performed-by-country.json  ukraine-border-crossings.json  (+3 more)
tests/fixtures/input/: cbpf-allocations-and-contributions.json  cbpf2-allocations-and-contributions.json  cerf-covid-19-allocations.json  cerf2-covid-19-allocations.json  covax_2pacx-1vtvzu79pptfaa2syevoqfyrrjy63djwitqu0ffbxiqczoun9k9timwmrvfgg1rbsnlmgyugzseiaye2-pub-gid-992438980-single-true-output-csv.csv  download-global-pcode-lengths.csv  download-global-pcodes-adm-1-2.csv  ethiopia-drought-related-key-figures.json  ethiopia_drought_affected_targeted_reached_by_cluster.csv  fallbacks.json  global-coordination-groups-beta.json  hno_2017_sahel_nutrition.csv  hno_2017_sahel_people_in_need.xlsx  idps_override_population-widget-id-264111-geo-id-693-population-group-54074999.json  ipc_somalia_som_food_insecurity_oct_dec2022_projection.csv  kenya_drought_affected_targeted_reached_by_cluster.csv  key_figures_2pacx-1vrppqx8jtkkkrckmzfncmmtfecvcpkbp9pdhs1sqtuyacmbsx8tlaxpgblfce-lcehukregguxja-4s-pub-gid-1275038715-single-true-output-csv.csv  key_figures_eth_2pacx-1vrppqx8jtkkkrckmzfncmmtfecvcpkbp9pdhs1sqtuyacmbsx8tlaxpgblfce-lcehukregguxja-4s-pub-gid-2015311116-single-true-output-csv.csv  key_figures_som_2pacx-1vrppqx8jtkkkrckmzfncmmtfecvcpkbp9pdhs1sqtuyacmbsx8tlaxpgblfce-lcehukregguxja-4s-pub-gid-0-single-true-output-csv.csv  org_type_organization_types_beta_csv.csv  organization-types-beta.json  oxcgrt_oxcgrt_csv.csv  oxford-covid-19-government-response-tracker.json  population.json  resource_downloader_xlsx_ukr_border_crossings_090622.xlsx  sadd_covid-data-dataset-fullvars-extype-csv.csv  sahel-humanitarian-needs-overview.json  sahel-humanitarian-needs-overview_prefix.json  sector_global_coordination_groups_beta_csv.csv  somalia-acute-food-insecurity-country-data.json  somalia-drought-related-key-figures.json  somalia-internally-displaced-persons-idps.json  somalia-pin-targeted-reached-by-location-and-cluster.json  somalia_drought_affected_targeted_reached_by_cluster.csv  timeseries_casualties_2pacx-1vqidedbzz0ehrc0b4fswip14r7mdtu1mpmwakuxupelsah2awcurkgalfduhjvyjul8vzzat3r1b5qg-pub-gid-0-single-true-output-csv.csv  ukraine-who-does-what-where-3w.json  who_national3_who-covid-19-global-data.csv  whowhatwhere_notags_3w_data.csv
tests/hdx/scraper/: __init__.py  affected_targeted_reached.py  conftest.py  education_closures.py  education_enrolment.py  test_education.py  test_education_closures.py  test_output.py  test_readers.py  test_regionlookup.py  test_runner.py  test_runner_get_results.py  test_scraper.py  test_scrapers.py  test_scrapers_aggregation.py  test_scrapers_appenddata.py  test_scrapers_custom.py  test_scrapers_filecopier.py  test_scrapers_global.py  test_scrapers_multipleurls.py  test_scrapers_national.py  test_scrapers_regionaltoplevel.py  test_scrapers_resource_downloaders.py  test_scrapers_subnational.py  test_scrapers_timeseries.py  test_sources.py  test_utils.py  unhcr_myanmar_idps.py
(+64 files in other folders)
