[metadata]
name = hdx-python-scraper
description = HDX Python scraper utilities
version = attr: hdx.scraper.__version__
author = Michael Rans
author_email = rans@email.com
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
keywords = HDX, scrapers, library
url = https://github.com/OCHA-DAP/hdx-python-scraper
platforms = any

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
zip_safe = True
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.6

install_requires =
    hdx-python-api>=5.5.9
    gspread
    regex

[options.extras_require]
pandas = pandas>=1.4.1

[options.packages.find]
where = src

[bdist_wheel]
universal = 1
